RESOLVED FIXED214061
[JSC] Should not pass Exception to JSPromise::reject
https://bugs.webkit.org/show_bug.cgi?id=214061
Summary [JSC] Should not pass Exception to JSPromise::reject
Yusuke Suzuki
Reported 2020-07-07 14:49:22 PDT
[JSC] Should not pass Exception to JSPromise::reject
Attachments
Patch (10.52 KB, patch)
2020-07-07 14:52 PDT, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2020-07-07 14:52:55 PDT
Yusuke Suzuki
Comment 2 2020-07-07 14:55:10 PDT
Mark Lam
Comment 3 2020-07-07 14:58:50 PDT
Comment on attachment 403730 [details] Patch r=me
EWS
Comment 4 2020-07-07 18:02:28 PDT
Committed r264052: <https://trac.webkit.org/changeset/264052> All reviewed patches have been landed. Closing bug and clearing flags on attachment 403730 [details].
Note You need to log in before you can comment on or make changes to this bug.