[JSC] Should not pass Exception to JSPromise::reject https://bugs.webkit.org/show_bug.cgi?id=214061 <rdar://problem/65134450>

Reviewed by Mark Lam.

JSTests:

* stress/import-exception.js: Added.
(import.string_appeared_here.then):

Source/JavaScriptCore:

In some places, we are passing Exception* as JSValue instead of Exception::value()'s JSValue.
Error and Exception are different, and Exception is not an object. We should pass Exception::value()'s
thrown value instead. I checked `reject(` call sites and ensure error is passed.

* API/JSAPIGlobalObject.mm:
(JSC::JSAPIGlobalObject::moduleLoaderImportModule):
(JSC::JSAPIGlobalObject::moduleLoaderFetch):
* jsc.cpp:
(GlobalObject::moduleLoaderImportModule):
(GlobalObject::moduleLoaderFetch):
* runtime/JSModuleLoader.cpp:
(JSC::JSModuleLoader::importModule):
(JSC::JSModuleLoader::resolve):
(JSC::JSModuleLoader::fetch):
(JSC::moduleLoaderParseModule):
* runtime/JSPromise.cpp:
(JSC::JSPromise::resolve):
(JSC::JSPromise::reject):


Canonical link: https://commits.webkit.org/226863@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264052 268f45cc-cd09-0410-ab3c-d52691b4dbfc