Source/JavaScriptCore/API/JSAPIGlobalObject.mm
@@ -126,12 +126,12 @@ JSInternalPromise* JSAPIGlobalObject::moduleLoaderImportModule(JSGlobalObject* g
 {
     VM& vm = globalObject->vm();
     auto scope = DECLARE_CATCH_SCOPE(vm);
-    auto reject = [&] (JSValue exception) -> JSInternalPromise* {
+    auto reject = [&] (JSValue error) -> JSInternalPromise* {
         scope.clearException();
         auto* promise = JSInternalPromise::create(vm, globalObject->internalPromiseStructure());
         // FIXME: We could have error since any JS call can throw stack-overflow errors.
         // https://bugs.webkit.org/show_bug.cgi?id=203402
-        promise->reject(globalObject, exception);
+        promise->reject(globalObject, error);
         scope.clearException();
         return promise;
     };
@@ -139,15 +139,15 @@ JSInternalPromise* JSAPIGlobalObject::moduleLoaderImportModule(JSGlobalObject* g
     auto import = [&] (URL& url) {
         auto result = importModule(globalObject, Identifier::fromString(vm, url.string()), jsUndefined(), jsUndefined());
         if (UNLIKELY(scope.exception()))
-            return reject(scope.exception());
+            return reject(scope.exception()->value());
         return result;
     };
 
     auto specifier = specifierValue->value(globalObject);
     if (UNLIKELY(scope.exception())) {
-        JSValue exception = scope.exception();
+        Exception* exception = scope.exception();
         scope.clearException();
-        return reject(exception);
+        return reject(exception->value());
     }
 
     String referrer = !sourceOrigin.isNull() ? sourceOrigin.string() : String();
@@ -170,9 +170,9 @@ JSInternalPromise* JSAPIGlobalObject::moduleLoaderFetch(JSGlobalObject* globalOb
 
     Identifier moduleKey = key.toPropertyKey(globalObject);
     if (UNLIKELY(scope.exception())) {
-        JSValue exception = scope.exception();
+        Exception* exception = scope.exception();
         scope.clearException();
-        promise->reject(globalObject, exception);
+        promise->reject(globalObject, exception->value());
         scope.clearException();
         return promise;
     }
